# MGC-backend

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 4601d46d22a7_init.py
app/: database.py  main.py
app/core/: config.py
app/dependencies/: auth.py
app/models/: __init__.py  article.py  category.py  order.py  product.py  review.py  user.py
app/routers/: auth.py  categories.py  products.py  reviews.py  users.py
app/schemas/: __init__.py  article.py  category.py  order.py  product.py  review.py  user.py
app/services/: auth.py  categories.py  email.py  media.py  products.py  reviews.py
app/utils/: validators.py
